feat: integrate Sentry for error tracking and performance monitoring
- Added Sentry initialization in a new instrument.server.mjs file.
- Updated package.json to include Sentry and dotenv-cli dependencies.
- Modified dev and start scripts to utilize the new Sentry integration.
- Refactored Header component to include a new demo link for Sentry testing.
- Updated routeTree to include a new route for Sentry testing.
- Created a new Sentry testing route component with interactive examples.
- Enhanced error handling in the Sentry testing component to capture exceptions.
- Added various UI components for demonstrating Sentry features.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "#/*": "./src/*"
   },
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
+    "dev": "dotenv -e .env.local -- sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000\"",
+    "build": "vite build && cp instrument.server.mjs .output/server",
     "preview": "vite preview",
     "test": "vitest run",
-    "deploy": "bun run build && wrangler deploy"
+    "deploy": "bun run build && wrangler deploy",
+    "start": "node --import ./.output/server/instrument.server.mjs .output/server/index.mjs"
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
@@ -26,7 +27,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "@sentry/tanstackstart-react": "^10.34.0",
+    "dotenv-cli": "^11.0.0"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
