--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "deploy": "bun run build && wrangler deploy"
+    "deploy": "bun run build && wrangler deploy",
+    "format": "biome format",
+    "lint": "biome lint",
+    "check": "biome check"
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
@@ -41,6 +44,7 @@
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5",
-    "wrangler": "^4.40.3"
+    "wrangler": "^4.40.3",
+    "@biomejs/biome": "2.2.4"
   }
 }
