--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "format": "biome format",
     "lint": "biome lint",
     "check": "biome check",
+    "prepare": "husky",
     "start": "node --import ./dist/server/instrument.server.mjs dist/server/index.mjs"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,md}": "biome check --no-errors-on-unmatched"
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
@@ -42,7 +46,9 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "husky": "^9.1.7",
     "jsdom": "^27.0.0",
+    "lint-staged": "^16.1.6",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
