--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "dotenv -e .env.local -- sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000\"",
-    "dev:ci": "sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000 --strictPort\"",
+    "dev:ci": "sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --host 127.0.0.1 --port 3000 --strictPort\"",
     "build": "vite build && cp instrument.server.mjs dist/server",
     "preview": "vite preview",
     "test": "vitest run",
