--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "scripts": {
     "dev": "dotenv -e .env.local -- sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000\"",
+    "dev:ci": "sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --host 127.0.0.1 --port 3000 --strictPort\"",
     "build": "vite build && cp instrument.server.mjs dist/server",
     "preview": "vite preview",
     "test": "vitest run",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "playwright test --headed",
+    "e2e:report": "playwright show-report",
     "deploy": "bun run build && wrangler deploy",
     "format": "biome format",
     "lint": "biome lint",
@@ -39,6 +44,7 @@
     "dotenv-cli": "^11.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
