feat: integrate T3Env for environment variable management and update dependencies

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "@sentry/tanstackstart-react": "^10.34.0",
-    "dotenv-cli": "^11.0.0"
+    "dotenv-cli": "^11.0.0",
+    "@t3-oss/env-core": "^0.13.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
